--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.scss
@@ -48,3 +48,8 @@
     padding: 0.5rem;
     border-radius: 10px;
 }
+:host ::ng-deep {
+    .comments.mat-mdc-form-field{
+        width: 44vh;
+    }
+}
