--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
@@ -48,6 +48,14 @@
                         </div>    
                     </div>
                     <div class="grid p-fluid">
+                        <div class="col-12 md:col-2">
+                            <p-rating [ngModel]="currentProduct.averageVote" [readonly]="true" [cancel]="false"></p-rating>
+                        </div>    
+                        <div class="col-12 md:col-2">
+                            <span style="color: red;">({{feedbacks.length}} đánh giá)</span>
+                        </div>             
+                    </div>
+                    <div class="grid p-fluid mt-3">
                         <div class="col-12 md:col-6">
                             <div class="price-box">
                                 <p style="display: inline-block;">
@@ -81,7 +89,7 @@
                                     [style]="{ width: '150px' }">
                                 </p-inputNumber>
                             </h4>
-                        </div>    
+                        </div>                            
                     </div>
                 </div>
             </div>
@@ -90,8 +98,45 @@
     <div class="product-detail">
         <p-card header="Đánh giá sản phẩm">
             <div class="row">
-                
+                <div class="card">
+                    <p-dataView #dv [value]="feedbacks">
+                        <ng-template let-feedback pTemplate="listItem">
+                            <div class="col-12">
+                                <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
+                                    <div class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
+                                        <div class="flex flex-column align-items-center sm:align-items-start gap-3">
+                                            <div class="text-2xl font-bold text-900">{{ feedback.userName }} ({{feedback.loginName}})</div>
+                                            <p-rating [(ngModel)]="feedback.votes" [readonly]="true" [cancel]="false"></p-rating>
+                                            <div class="flex align-items-center gap-3">
+                                                <span class="flex align-items-center gap-2">
+                                                    <i class="pi pi-tag"></i>
+                                                    <span class="font-semibold">{{ feedback.comments }}</span>
+                                                </span>
+                                            </div>
+                                        </div>
+                                        <div class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2">
+                                            <span class="text-xl">{{feedback.createdDate | date : "hh:mm:ss a, dd/MM/yyyy" }}</span>
+                                            <p-button icon="pi pi-comments" styleClass="p-button-help" (click)="openAdminReplyPopup()"></p-button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template>
+                    </p-dataView>
+                </div>
             </div>
         </p-card>
     </div>
 </div>
+<p-dialog [(visible)]="displayAdminReplyPopup" [style]="{width: '450px'}" header="Đánh giá" [modal]="true" styleClass="p-fluid" class="profile">
+    <mat-form-field class="mt-3 comments">
+        <mat-label>Đánh giá</mat-label>
+        <textarea matInput [(ngModel)]="adminReplyContent" type="string" rows="4" cols="60"></textarea>
+      </mat-form-field>
+    <ng-template pTemplate="footer">
+        <div class="pt-2">
+            <button pButton label="Lưu" class="p-button-rounded p-button-success"></button>    
+            <button pButton label="Huỷ" class="p-button-rounded p-button-secondary ml-1" type="button" (click)="hideAdminReplyPopup()"></button> 
+        </div>
+    </ng-template>
+  </p-dialog>
