--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
@@ -105,7 +105,7 @@
                                 <div class="flex flex-column xl:flex-row xl:align-items-start p-4 gap-4">
                                     <div class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4">
                                         <div class="flex flex-column align-items-center sm:align-items-start gap-3">
-                                            <div class="text-2xl font-bold text-900">{{ feedback.userName }} ({{feedback.loginName}})</div>
+                                            <div class="text-xl font-bold text-900">{{ feedback.userName }} ({{feedback.loginName}})</div>
                                             <p-rating [(ngModel)]="feedback.votes" [readonly]="true" [cancel]="false"></p-rating>
                                             <div class="flex align-items-center gap-3">
                                                 <span class="flex align-items-center gap-2">
@@ -116,11 +116,21 @@
                                         </div>
                                         <div class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2">
                                             <span class="text-xl">{{feedback.createdDate | date : "hh:mm:ss a, dd/MM/yyyy" }}</span>
-                                            <p-button icon="pi pi-comments" styleClass="p-button-help" (click)="openAdminReplyPopup()"></p-button>
+                                            <p-button *ngIf="userRole == 'admin'" icon="pi pi-comments" styleClass="p-button-help" pTooltip="Phản hồi" tooltipPosition="bottom" (click)="openAdminReplyPopup(feedback)"></p-button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <p-fieldset *ngIf="feedback.adminReply != null" class="ml-5">
+                                <ng-template pTemplate="header">
+                                    <div class="flex align-items-center text-primary">
+                                        <span class="pi pi-user mr-2"></span>
+                                        <span class="font-bold text-lg">Quản trị viên</span> 
+                                        <span class="ml-3" style="color: black; font-size: medium;">({{feedback.replyDate | date : "hh:mm:ss a, dd/MM/yyyy"}}) </span> 
+                                    </div>
+                                </ng-template>
+                                {{feedback.adminReply}}
+                            </p-fieldset>
                         </ng-template>
                     </p-dataView>
                 </div>
@@ -128,14 +138,14 @@
         </p-card>
     </div>
 </div>
-<p-dialog [(visible)]="displayAdminReplyPopup" [style]="{width: '450px'}" header="Đánh giá" [modal]="true" styleClass="p-fluid" class="profile">
+<p-dialog [(visible)]="displayAdminReplyPopup" [style]="{width: '450px'}" header="Phản hồi đánh giá" [modal]="true" styleClass="p-fluid" class="profile">
     <mat-form-field class="mt-3 comments">
-        <mat-label>Đánh giá</mat-label>
+        <mat-label>Hãy nhập phản hồi</mat-label>
         <textarea matInput [(ngModel)]="adminReplyContent" type="string" rows="4" cols="60"></textarea>
       </mat-form-field>
     <ng-template pTemplate="footer">
         <div class="pt-2">
-            <button pButton label="Lưu" class="p-button-rounded p-button-success"></button>    
+            <button pButton label="Lưu" class="p-button-rounded p-button-success" (click)="sumbitAdminReply()"></button>    
             <button pButton label="Huỷ" class="p-button-rounded p-button-secondary ml-1" type="button" (click)="hideAdminReplyPopup()"></button> 
         </div>
     </ng-template>
