--- a/AngularFrontEnd/projects/features/src/app/admin-brand/admin-brand.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-brand/admin-brand.component.html
@@ -36,14 +36,12 @@
                                     ></button>
                                     </td> 
                                 </span>
-                                <span *ngSwitchCase="'isActive'" pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}>  
-                                </span> 
+                                <span *ngSwitchCase="'boolean'" pTooltip="{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}" tooltipPosition="bottom">{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}</span> 
                                 <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
                             </span>                   
                             </td>
                         </tr>
                     </ng-template>
-                    
                     <ng-template pTemplate="emptymessage">
                         <tr>
                             <td colspan="13">No data found.</td>
