--- a/AngularFrontEnd/projects/features/src/app/admin-category/admin-category.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-category/admin-category.component.html
@@ -41,8 +41,7 @@
                                 <span *ngSwitchCase="'image'">
                                     <img [src]="createImgPath(rowData[col.field])" alt="product picture" class="categoryImage">  
                                 </span> 
-                                <span *ngSwitchCase="'isActive'" pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}>  
-                                </span> 
+                                <span *ngSwitchCase="'boolean'" pTooltip="{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}" tooltipPosition="bottom">{{ rowData[col.field] == true ? 'Hiện' : 'Ẩn' }}</span> 
                                 <span *ngSwitchDefault pTooltip="{{rowData[col.field]}}" tooltipPosition="bottom">{{ rowData[col.field] }}</span> 
                             </span>                   
                             </td>
