--- a/AngularFrontEnd/projects/features/src/app/vip/vip.component.scss
+++ b/AngularFrontEnd/projects/features/src/app/vip/vip.component.scss
@@ -8,6 +8,7 @@
 :host ::ng-deep {
     .card-vip .p-card .p-card-body{
         background-color: silver;
+        border-radius: 15px;
     }
 }
 .card-vip-note{
