--- a/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
+++ b/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
@@ -55,7 +55,9 @@
             </ng-template>
     
             <ng-template pTemplate="summary">
-                <p style="text-align: center;">Total money : <b style="color: red;">{{ getTotalMoney() | currency : "VND" }}</b></p>
+                <p style="text-align: center;">Tổng giá trị sản phẩm : <b style="color: black;">{{ getTotalMoney() | currency : "VND" }}</b></p>
+                <p style="text-align: center;">Giảm giá (VIP - {{currentUser.discount}}%) : <b style="color: red;">{{ (getTotalMoney() * currentUser.discount) / 100 | currency : "VND" }}</b></p>
+                <p style="text-align: center;">Tổng hóa đơn : <b style="color: green;">{{getTotalMoney() - (getTotalMoney() * ((currentUser.discount) / 100)) | currency : "VND" }}</b></p>
                 <button [disabled]="products.length == 0" pButton label="Xác nhận đơn hàng" class="p-button-success btnBuy" (click)="showViewConfirm()"></button>
             </ng-template>
         </p-table>
