fix some bug UI related to feedback product and update documentation

--- a/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
+++ b/AngularFrontEnd/projects/features/src/app/admin-user/admin-user.component.html
@@ -72,7 +72,7 @@
                         <input matInput formControlName = "Email" name = "Email" required=""> 
                     </mat-form-field>        
                     <mat-form-field appearance="outline"> 
-                        <mat-label>Telephone</mat-label>     
+                        <mat-label>Số điện thoại</mat-label>     
                         <input matInput formControlName = "TelNum" name = "TelNum" required="">
                         <mat-error *ngIf="editUserForm.get('TelNum')?.hasError('required')">
                             Hãy nhập số điện thoại
