--- a/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
+++ b/AngularFrontEnd/projects/features/src/app/cart/cart.component.html
@@ -168,14 +168,14 @@
                         </td>
                         <td>
                             <mat-form-field>
-                                <mat-label>Phương thức nhận hàng</mat-label>
+                                <mat-label>Phương thức thanh toán</mat-label>
                                 <mat-select (valueChange)="changeValuePayment($event)" required="" [(value)]="methods[0].key">
                                     <mat-option *ngFor="let method of methods" [value]="method.key">
                                         {{ method.name }}
                                     </mat-option>
                                 </mat-select>
                                 <mat-error *ngIf="editUserForm.get('Payment')?.hasError('required')">
-                                    Hãy chọn phương thức nhận hàng!
+                                    Hãy chọn phương thức thanh toán!
                                 </mat-error>
                             </mat-form-field>
                         </td>
