fix forget password, update documentation

--- a/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
+++ b/AngularFrontEnd/projects/features/src/app/home-page/home-page.component.html
@@ -32,7 +32,7 @@
               </p-tabMenu>
           </div>
           <div>
-            <p-carousel *ngIf="visible" [value]="lstProduct" styleClass="custom-carousel" [numVisible]="4" [numScroll]="1" [circular]="true" [autoplayInterval]="0" [responsiveOptions]="responsiveOptions">
+            <p-carousel *ngIf="visible" [value]="lstProductFilter" styleClass="custom-carousel" [numVisible]="4" [numScroll]="1" [circular]="true" [autoplayInterval]="0" [responsiveOptions]="responsiveOptions">
                 <ng-template let-product pTemplate="item">
                     <div class="product-item">
                         <div class="list-item">
