fix jwt token 12-9-23

--- a/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
+++ b/AngularFrontEnd/projects/features/src/app/product-detail/product-detail.component.html
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p-fieldset *ngIf="feedback.adminReply != null" class="ml-5">
+                            <p-fieldset *ngIf="feedback.adminReply != null" class="ml-5 mb-3">
                                 <ng-template pTemplate="header">
                                     <div class="flex align-items-center text-primary">
                                         <span class="pi pi-user mr-2"></span>
